# SMA

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: binary.rs  cfg.rs  elf.rs  entropy.rs  error.rs  hexdump.rs  imports.rs  json.rs  lib.rs  main.rs  pe.rs  reader.rs  rules.rs  strings.rs
tests/: tests.md
